# rmdoop

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml
src/: cli.rs  grouping.rs  io.rs  main.rs  tests.rs
