[package]
name = "rmdoop"
version = "0.1.0"
description = "A CLI tool for recursively removing duplicate files (by content) from different directories."
repository = "https://github.com/Zitronenjoghurt/rmdoop"
license = "MIT"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
