[package]
name = "rmdoop"
version = "0.1.0"
description = "A CLI tool for recursively removing duplicate files (by content) from different directories."
repository = "https://github.com/Zitronenjoghurt/rmdoop"
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
rapidhash = "4.4.1"
jwalk = "0.8.1"

[dev-dependencies]
tempfile = "3.27.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
